objects/BMCServiceDesk__ChatDetail__c.object
<CustomObject>
    <description>This will store the message details for every chat instance across Remedyforce.</description>
    <fields>
        <fullName>BMCServiceDesk__FKChatInstance__c</fullName>
        <label>Chat Instance</label>
        <referenceTo>BMCServiceDesk__ChatInstance__c</referenceTo>
        <relationshipLabel>Chat Details</relationshipLabel>
        <relationshipName>Chat_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSender__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the user who has sent the chat message</description>
        <label>Sender</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chat_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsMessageRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Message Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Message__c</fullName>
        <description>Stores the chat message sent.</description>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <formula>VALUE(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Chat Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>